--- a/css/styles.css
+++ b/css/styles.css
@@ -56,6 +56,10 @@ img {
 .header {
   padding-top: 44px;
 }
+.header .container {
+  display: flex;
+  align-items: center;
+}
 .logo {
   color: var(--accent-color);
   font-family: Bilbo Swash Caps;
@@ -63,12 +67,20 @@ img {
   line-height: 1.78;
   letter-spacing: 1.3px;
 }
+.nav {
+  margin-left: auto;
+}
+.nav-list {
+  display: flex;
+  gap: 10px;
+}
 .nav-link {
   color: var(--accent-color);
   font-size: 14px;
   line-height: 2.92;
   text-transform: uppercase;
   text-decoration: none;
+  padding: 10px;
 }
 .nav-link:hover,
 .nav-link:focus {
@@ -85,6 +97,10 @@ img {
   line-height: 1.87;
   letter-spacing: -1px;
   text-transform: uppercase;
+}
+.services-list {
+  display: flex;
+  gap: 50px;
 }
 .services-item-title {
   color: var(--main-color);
@@ -111,6 +127,35 @@ img {
   font-size: 40px;
   letter-spacing: -1px;
   text-transform: uppercase;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 114px;
+}
+.contact-us-form {
+  display: flex;
+  align-items: center;
+  gap: 28px;
+  flex-wrap: wrap;
+}
+.contact-us-form-box {
+  display: flex;
+  flex-direction: column;
+  gap: 28px;
+}
+.contact-us-input {
+  padding: 12px 20px 21px;
+  width: 455px;
+}
+.contact-us-textarea {
+  font-size: 14px;
+  font-weight: 700;
+  letter-spacing: -0.35px;
+  text-transform: uppercase;
+  padding-top: 14px;
+  padding-left: 22px;
+  resize: none;
+  width: 458px;
+  height: 212px;
 }
 .contact-us-input::placeholder,
 .contact-us-textarea::placeholder {
